test/ui/tests/metadata/keyless-record.stderr
error: found integer but expected record key
 --> ${DIRECTORY}/metadata/keyless-record.metadata:2:3
  |
2 | { 0, 0, 0, 1, 1, 0, 0, 1 }
  |   ^ 
  |

error: aborting due to previous error

