test/ui/tests/metadata/keyless-record.metadata
# TEST fail metadata
{ 0, 0, 0, 1, 1, 0, 0, 1 }
